update to my info

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "http://kuanliang.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Data & Algorithm Talks
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: What I learned when machine learned!
 
 # --- Navigation bar options --- #
 
@@ -25,10 +25,9 @@ description: A virtual proof that name is awesome!
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+    - GitHub Pages: "https://kuanliang.github.com/"
+  Author's home: "http://kuanliang.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -39,13 +38,13 @@ avatar: "/img/avatar-icon.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
-  stackoverflow: yourlink  # eg. "3943160/daattali"
+  name: Kuan-Liang (Andrew) Liu
+  email: "kliangliu@gmail.com"
+  facebook: kuanliang.liu  # eg. daattali
+  github: kuanliang    # eg. daattali
+  twitter: kliangliu   # eg. daattali
+  linkedin: https://tw.linkedin.com/in/kuanliangliu  # eg. "pub/dean-attali/8/946/143"
+  stackoverflow: 6020995/劉冠良  # eg. "3943160/daattali"
  
 # Select which links to show in the footer
 footer-links-active:
@@ -54,8 +53,8 @@ footer-links-active:
   email: true
   twitter: true
   github: true
-  linkedin: false
-  stackoverflow: false
+  linkedin: true
+  stackoverflow: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
