update linkedin account

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   facebook: kuanliang.liu  # eg. daattali
   github: kuanliang    # eg. daattali
   twitter: kliangliu   # eg. daattali
-  linkedin: https://tw.linkedin.com/in/kuanliangliu  # eg. "pub/dean-attali/8/946/143"
+  linkedin: kuanliangliu  # eg. "pub/dean-attali/8/946/143"
   stackoverflow: 6020995/劉冠良  # eg. "3943160/daattali"
  
 # Select which links to show in the footer
