--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,9 @@ description: What I learned when machine learned!
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://kuanliang.github.com/"
-  Author's home: "http://kuanliang.github.io"
+  Home: "http://kuanliang.github.io"
+  projects: "http://kuanliang.github.io"
+  About Me / Contact: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
