--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: What I learned when machine learned!
 # List of links in the navigation bar
 navbar-links:
   Home: "http://kuanliang.github.io"
-  projects: "http://kuanliang.github.io"
+  projects: "projects"
   About Me / Contact: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
