--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Data & Algorithm Talk
+title: Data & Algorithm Talks
 
 # Short description of your site
 description: What I learned when machine learned!
